@@ -1,3 +1,4 @@
+Build a Fraction: Added standalone app for build a fraction
 Fraction Matcher: Expanded ninja star a little bit
 Fraction Matcher: Added ninja star for level 8 and as a new representation
 Fraction Matcher: Added ring of hexagons for level 7 and as a new representation
